fix for dark mode

--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@ body{
     margin: 0;
     padding: 0;
     background-color: var(--bg_body);
+    color: var(--body-text);
 }
 
 /* Navbar Styling Begin */
